--- a/Nos_Projets.html
+++ b/Nos_Projets.html
@@ -429,7 +429,7 @@
                     <td>2023</td>
                 </tr>
                 <tr>
-                    <th>Montant (en Euros)</th>
+                    <th>Montant (en MAD)</th>
                     <td>3900dhs</td>
                 </tr>
                 <tr>
