--- a/Nos_Projets.html
+++ b/Nos_Projets.html
@@ -303,7 +303,7 @@
                     <td>2021-2024</td>
                 </tr>
                 <tr>
-                    <th>Montant (en euros)</th>
+                    <th>Montant (en MAD)</th>
                     <td>480 000.00dhs (soit 160 000dhs par an)</td>
                 </tr>
                 <tr>
