--- a/A_propos_de_nous.html
+++ b/A_propos_de_nous.html
@@ -195,7 +195,7 @@
                 - Gouvernement princier de Monaco / IECD / ILLIS
                 - ECHOS Communication
                 </p>
-            <img src="contenue_image/Capture d'écran 2025-06-25 114229.png" alt="" srcset="">
+            <img src="contenue_image/Group 29.png" alt="" srcset="">
         </div>
       </section>
       <footer>
