--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
            </div>
 
         <div id="quelque_activites">
-            <h1 class="title">Quelque Activites </h1>
+            <h1 class="title">Quelque Activités </h1>
             <div class="quelque_activites">
                 
                 <div>
                     <img src="contenue_image/sport.jpg" alt="activites sportives" title="pratique" class="sport">
-                    <h1>ACTIVITES SPORTIVES</h1>
+                    <h1>Activités Sportives</h1>
                 </div>
                 <div>
                     <img src="contenue_image/evenement.jpg" alt="evenement" title="pratique">
@@ -75,7 +75,7 @@
                 </div>
                 <div>
                     <img src="contenue_image/Pratique.jpg" alt="pratique" title="pratique">
-                    <h1>PRATIQUE</h1>
+                    <h1>PRATIQUES</h1>
                 </div>
                 <div>
                     <img src="contenue_image/Visites.jpg" alt="Visites" title="Visites">
