--- a/nos_formations.html
+++ b/nos_formations.html
@@ -49,12 +49,12 @@
         </div>
 
         <div class="q2">
-            <h1>Apres de formation</h1>
+            <h1>Après de formation</h1>
             <p>Encadrement et accompagnement personnalisé. Aide à l'insertion professionnelle.</p>
         </div>
         
         <div class="q3">
-            <h1>Periode de formation</h1>
+            <h1>Période de formation</h1>
             <p>Entre 1 et 2 ans</p>
         </div>
       </div>
@@ -95,7 +95,7 @@
             </div>
             <div id="peinture">
                 <h2>peinture</h2>
-                <p></p>
+                <p>L’éducation présentielle à la peinture offre un cadre idéal pour l’apprentissage pratique et la créativité, en mêlant technique, interaction en temps réel et retours personnalisés, favorisant un développement artistique complet .</p>
             </div>
       </div>
 <footer>
