--- a/nous_contacter.html
+++ b/nous_contacter.html
@@ -81,7 +81,7 @@
         <a href="https://www.linkedin.com/in/association-marocaine-chantiers-ecoles-%D8%A7%D9%84%D8%AC%D9%85%D8%B9%D9%8A%D8%A9-%D8%A7%D9%84%D9%85%D8%BA%D8%B1%D8%A8%D9%8A%D8%A9-%D9%84%D8%A3%D9%88%D8%B1%D8%A7%D8%B4-%D8%A7%D9%84%D9%85%D8%AF%D8%A7%D8%B1%D8%B3-%D9%84%D9%84%D8%AA%D9%86%D9%85%D9%8A%D8%A9-1b11051bb/" class="Linkedin"><img src="contenue_image/Linkedin__Icône_Blanc.png" alt=""><p>Chantier-École</p></a>
         <a href="https://www.facebook.com/AMCTetouan.Officiel" class="facebook"><img src="contenue_image/facebook icone.png" ><p>AMCTetouan.Officiel</p></a>
         <a href="https://www.instagram.com/amchantiers" class="Instagram"><img src="contenue_image/Instagram_Icône.png" alt=""><p>amchantiers</p></a>
-        <a href="#" class="Whatsapp"><img src="contenue_image/Icône_Blanche_Whatsapp.png" alt=""><p>06xxxxxxxx</p></a>
+        <a href="#" class="Whatsapp"><img src="contenue_image/Icône_Blanche_Whatsapp.png" alt=""><p>__________</p></a>
     </div>
     <div class="footer2"><p>© 2025 Chantiers-Écoles. Tous droits réservés</p></div>
 </footer>
