--- a/Nos_Projets.html
+++ b/Nos_Projets.html
@@ -211,7 +211,7 @@
                     <td>2019-2021</td>
                 </tr>
                 <tr>
-                    <th>Montant (en euros)</th>
+                    <th>Montant (en MAD)</th>
                     <td>600 000.00dhs (soit 300000dhs par an)</td>
                 </tr>
                 <tr>
@@ -275,7 +275,7 @@
                     <td>2021-2022/ 2022- 2023/ 2023-2024</td>
                 </tr>
                 <tr>
-                    <th>Montant (en euros)</th>
+                    <th>Montant (en MAD)</th>
                     <td>1 200 000.00dhs (soit 400 000dhs par an)</td>
                 </tr>
                 <tr>
